--- a/random-quote-machine/src/App.css
+++ b/random-quote-machine/src/App.css
@@ -12,16 +12,16 @@
 }
 
 .red-background {
-  background-color: #ff0000;
+  background-color: #ff1500;
   color: black;
 }
 
 .blue-background {
-  background-color: #0000ff;
+  background-color: #006aff;
   color: white;
 }
 
 .yellow-background {
-  background-color: #ffff00;
+  background-color: #eaff00;
   color: black;
 }
