--- a/random-quote-machine/src/NewQuote.css
+++ b/random-quote-machine/src/NewQuote.css
@@ -1,11 +1,12 @@
 .NewQuote {
   text-align: center;
-  height: 60%;
+  height: 45%;
   width: 45%;
   border: none;
   border-radius: 5px;
   font-size: 0.8em;
   font-weight: bold;
+  margin: auto;
 }
 
 .NewQuote:focus {
@@ -13,16 +14,29 @@
 }
 
 .red-background {
-  background-color: #ff0000;
+  background-color: #ff1500;
   color: #000000;
 }
 
 .blue-background {
-  background-color: #0000ff;
-  color: #ff8000;
+  background-color: #006Aff;
+  color: #eaff00;
 }
 
 .yellow-background {
-  background-color: #ffff00;
-  color: #0080ff;
+  background-color: #eaff00;
+  color: #006bff;
+}
+
+@media (orientation: portrait) and (max-device-width: 767px) {
+  .NewQuote {
+    height: 40%;
+  }
+}
+
+@media (orientation: landscape) and (max-device-height: 450px) {
+  .NewQuote {
+    height: 60%;
+  font-size: 1em;
+  }
 }
