--- a/random-quote-machine/src/QuoteBox.css
+++ b/random-quote-machine/src/QuoteBox.css
@@ -3,39 +3,47 @@
   text-align: center;
   max-width: 80%;
   max-height: 60vh;
-  width: 500px;
+  width: 800px;
   height: 500px;
   border-radius: 10px;
   box-shadow: 4px 3px black;
 }
 
 .red-complimentary-background {
-  background-color: #0080ff;
+  background-color: #006aff;
   color: white;
 }
 
 .blue-complimentary-background {
-  background-color: #7fff00;
+  background-color: #ff1500;
   color: white;
 }
 
 .yellow-complimentary-background {
-  background-color: #8000ff;
+  background-color: #9400ff;
   color: black;
 }
 
 .quote-box-top {
-  height: 70%;
+  height: 20%;
+}
+
+.quote-box-middle {
+  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
 .quote-box-bottom {
-  height: 30%;
+  height: 40%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
+
+.quote-box-underneath {
+  height: 0%;
 }
 
 .quote-box-bottom-left {
@@ -50,4 +58,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+@media (orientation: portrait) and (max-device-width: 767px) {
+  .QuoteBox {
+    max-height: 60vh;
+  }
+  .quote-box-top {
+    height: 10%;
+  }
+  .quote-box-middle {
+    height: 50%;
+  }
+  .quote-box-bottom {
+    height: 40%;
+  }
+  .quote-box-underneath {
+    height: 0%;
+  }
 }
