fix github label for how-was-dinner
add git label for how-was-dinner

--- a/how-was-dinner/how_was_dinner.css
+++ b/how-was-dinner/how_was_dinner.css
@@ -61,3 +61,42 @@ html,body {
     margin: .25rem 1rem;
   }
 }
+
+.attachment-full {
+  position: absolute;
+  right: 0px;
+  height: 149px;
+  width: 149px;
+}
+
+.githubLabel {
+  background-color: #00293C;
+  border: none;
+  width: 149px;
+  height: 0px;
+  position: absolute;
+  right: 0px;
+  margin-top: -10px;
+}
+
+@media (orientation: portrait) {
+  .attachment-full {
+    height: 99px;
+    width: 99px;
+  }
+
+  .githubLabel {
+    width: 99px;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 400px) {
+  .attachment-full {
+    height: 99px;
+    width: 99px;
+  }
+
+  .githubLabel {
+    width: 99px;
+  }
+}
