--- a/tools-that-love-you/tools_that_love_you.css
+++ b/tools-that-love-you/tools_that_love_you.css
@@ -16,7 +16,7 @@ body {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 999;
+  z-index: 998;
 }
 
 #logo-container {
@@ -288,8 +288,47 @@ body {
 
 }
 
+.attachment-full {
+  position: absolute;
+  right: 0px;
+  height: 149px;
+  width: 149px;
+  z-index: 999;
+}
+
+.githubLabel {
+  background-color: #00293C;
+  border: none;
+  width: 149px;
+  height: 0px;
+  position: absolute;
+  right: 0px;
+  margin-top: -10px;
+  z-index: 999;
+}
+
 @media (orientation: portrait) {
   .footer-l {
     font-size: 75%;
+  }
+
+  .attachment-full {
+    height: 99px;
+    width: 99px;
+  }
+
+  .githubLabel {
+    width: 99px;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 400px) {
+  .attachment-full {
+    height: 99px;
+    width: 99px;
+  }
+
+  .githubLabel {
+    width: 99px;
   }
 }
