--- a/lmde-3-disk-encryption/lmde-3-disk-encryption.css
+++ b/lmde-3-disk-encryption/lmde-3-disk-encryption.css
@@ -1,5 +1,19 @@
 html {
   font-family: 'Roboto', sans-serif;
+  scrollbar-color: #40916b #914066;
+  scrollbar-width: thin;
+}
+
+html::-webkit-scrollbar {
+  background-color: #40916b;
+  border-radius: 50%;
+  width: 4px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #914066;
+  border-radius: 50%;
+  width: 4px;
 }
 
 .nav-container {
@@ -13,6 +27,21 @@ html {
   width: 34%;
   display: flex;
   justify-content: center;
+  scrollbar-color: #914066 #40916b;
+  scrollbar-width: thin;
+  direction: rtl;
+}
+
+.nav-container::-webkit-scrollbar {
+  background-color: #40916b;
+  border-radius: 50%;
+  width: 4px;
+}
+
+.nav-container::-webkit-scrollbar-thumb {
+  background-color: #914066;
+  border-radius: 50%;
+  width: 4px;
 }
 
 .main-container {
@@ -52,10 +81,12 @@ pre,code {
 
 h1 {
   font-size: 175%;
+  color: #914066;
 }
 
 h2 {
   font-size: 150%;
+  color: #40916b;
 }
 
 h3 {
@@ -66,6 +97,15 @@ button {
   margin-left: 4%;
   margin-top: 1%;
   margin-bottom: 2%;
+  background: #40916b;
+  color: white;
+  border-radius: 10px;
+  border-color: black;
+  font-weight: bold;
+}
+
+button:active {
+  background: #914066;
 }
 
 .attachment-full {
@@ -82,7 +122,6 @@ button {
   height: 0px;
   position: absolute;
   right: 0px;
-  margin-top: -10px;
 }
 
 @media only screen and (max-width: 1100px) {
