update layout lmde-3-disk-encryption

--- a/lmde-3-disk-encryption/lmde-3-disk-encryption.css
+++ b/lmde-3-disk-encryption/lmde-3-disk-encryption.css
@@ -109,7 +109,7 @@ button:active {
 }
 
 .attachment-full {
-  position: absolute;
+  position: fixed;
   right: 0px;
   height: 149px;
   width: 149px;
